added photos and changed color to blue

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
       button {
         display: block;
         margin: 0 auto;
-        border: 1px solid plum;
+        border: 1px solid blue;
         font-size: 20px;
         border-radius: 6px;
         padding: 10px 15px;
         transition: all 150ms ease-in-out;
       }
       button:hover {
-        background: plum;
+        background: blue;
         cursor: pointer;
       }
       .container {
