added styling to the p and added a new div for a grid

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       img {
         max-width: 100%;
       }
+      p {
+        font-size: 18px;
+        line-height: 1.5;
+      }
 
       button {
         display: block;
@@ -71,10 +75,12 @@
       <a href="https://www.britannica.com/topic/baking" target="_blank">
         <img src="images/macaron.JPG" alt="" class="baking-intro-picture"
       /></a>
-      <img src="images/Applepie.JPG" alt="" />
-      <img src="images/cinnimonroll.JPG" alt="" />
-      <img src="images/keylimepie.JPG" alt="" />
-      <img src="images/weddingcake.JPG" alt="" />
+      <div class="grid">
+        <img src="images/Applepie.JPG" alt="" />
+        <img src="images/cinnimonroll.JPG" alt="" />
+        <img src="images/keylimepie.JPG" alt="" />
+        <img src="images/weddingcake.JPG" alt="" />
+      </div>
       <p>
         Baking unlocks all your senses. Whether it's the smell of brownies
         cooling or the feeling of kneading dough, according to psychologist Dr
