added grid fr and adjusted the height of the pictures

--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
         filter: contrast(50%);
         transform: scale(1.1);
       }
+      .grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 15px;
+      }
+      .grid img {
+        width: 100%;
+      }
       footer {
         text-align: center;
         margin: 10px 0;
@@ -77,8 +85,8 @@
       /></a>
       <div class="grid">
         <img src="images/Applepie.JPG" alt="" />
-        <img src="images/cinnimonroll.JPG" alt="" />
-        <img src="images/keylimepie.JPG" alt="" />
+        <img src="images/cinnimonroll.JPG" alt="" height="365" />
+        <img src="images/keylimepie.JPG" alt="" height="365" />
         <img src="images/weddingcake.JPG" alt="" />
       </div>
       <p>
